--- a/style.css
+++ b/style.css
@@ -1,9 +1,48 @@
 body {
-
     background-color: black;
+
 }
 
-.my_nav {
+.nav {
+    height: 653px;
 
-    background-color: black;
+}
+
+/* card start */
+.card {
+    box-sizing: border-box;
+    width: 390px;
+    height: 554px;
+    background: rgba(217, 217, 217, 0.58);
+    border: 1px solid white;
+    box-shadow: 12px 17px 51px rgba(0, 0, 0, 0.22);
+    backdrop-filter: blur(6px);
+    border-radius: 17px;
+    text-align: center;
+    cursor: pointer;
+    transition: all 0.5s;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    user-select: none;
+    font-weight: bolder;
+    color: black;
+    margin: 20px;
+}
+
+.card:hover {
+    border: 1px solid black;
+    transform: scale(1.05);
+}
+
+.card:active {
+    transform: scale(0.95) rotateZ(1.7deg);
+}
+
+/* card end */
+
+
+.card_image {
+    width: 300px;
+    height: 400px;
 }
