--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
+* {
+    box-sizing: border-box;
+    font-family: "Gugi", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+}
+
+
+
+
 body {
     background-color: black;
 
@@ -45,4 +55,86 @@ body {
 .card_image {
     width: 300px;
     height: 400px;
+}
+
+
+#input_movie {
+    width: 500px;
+    height: 40px;
+    border-top: none;
+    border-left: none;
+    border-right: none;
+    border-bottom: 3px solid white;
+
+}
+
+
+/*  */
+.main_input {
+    position: relative;
+    width: 300px;
+    margin-left: 50px;
+    margin-top: 100px;
+}
+
+input {
+    font-size: 15px;
+    color: white;
+    width: 300px;
+    border: none;
+    border-bottom: solid #aaaaaa 1px;
+    padding-bottom: 10px;
+    padding-left: 10px;
+    position: relative;
+    background: none;
+    z-index: 5;
+}
+
+input::placeholder {
+    color: #aaaaaa;
+}
+
+input:focus {
+    outline: none;
+}
+
+span {
+    display: block;
+    position: absolute;
+    bottom: 0;
+    left: 0%;
+    /* right로만 바꿔주면 오 - 왼 */
+    background-color: #666;
+    width: 0;
+    height: 2px;
+    border-radius: 2px;
+    transition: 0.5s;
+}
+
+label {
+    position: absolute;
+    color: #aaa;
+    left: 10px;
+    font-size: 20px;
+    bottom: 8px;
+    transition: all .2s;
+}
+
+input:focus~label,
+input:valid~label {
+    font-size: 16px;
+    bottom: 40px;
+    color: #666;
+    font-weight: bold;
+}
+
+input:focus~span,
+input:valid~span {
+    width: 100%;
+}
+
+
+.card_button {
+    position: absolute;
+    bottom: 10px;
 }
